# Auto-Debate---Two-Agent-Local-LLM-Debate-App

./: .editorconfig  .env.example  .gitignore  LICENSE  PROJECT.md  README.md  ROADMAP.md  app.py  config.py  engine.py  judge.py  llm.py  memory.py  prompts.py  pyproject.toml  quality.py  reflection.py  requirements-dev.txt  requirements.txt  research.py  run.ps1
.streamlit/: config.toml
auto_debate/: __init__.py  config.py  engine.py  judge.py  llm.py  memory.py  quality.py  reflection.py  run_metadata.py
auto_debate/prompts/: __init__.py
auto_debate/research/: __init__.py  filter.py  knowledge.py  planner.py  researcher.py  stance.py
docs/research/: agentic_research.md
prompts/: __init__.py  composer.py  fragments.py  presets.py  registry.py
scripts/: __init__.py  bench.py  bootstrap.ps1  bootstrap.sh  bootstrap_env.py  check_ollama.py  check_system.py  ci.ps1  dry_run.py  install_defaults.py  smoke_llm.py
tests/: __init__.py  test_config.py  test_engine.py  test_filter.py  test_judge.py  test_knowledge.py  test_llm.py  test_memory.py  test_persona_library.py  test_planner.py  test_prompt_composer.py  test_prompts.py  test_quality.py  test_reflection.py  test_research.py  test_run_metadata.py  test_smoke.py  test_stance.py
